New growl plugin, minor updates

--- a/stylesheets/redlove/base.css
+++ b/stylesheets/redlove/base.css
@@ -140,7 +140,7 @@ body {
 ------------------------------------------------------------ */
 
 /* 
-	Base Font Size
+	Base Font - Size
 ---------------------------------------- */
 /*http://coding.smashingmagazine.com/2007/05/10/70-expert-ideas-for-better-css-coding/*/
 html {
@@ -158,7 +158,7 @@ html {
 }
 
 /* 
-	Base Font Family
+	Base Font - Family
 ---------------------------------------- */
 body {
 	/*
