--- a/stylesheets/site.example.css
+++ b/stylesheets/site.example.css
@@ -35,7 +35,7 @@
 -------------------------------------------------------------------------------- */
 
 /* 
-	Base Font Family
+	Base Font - Family
 ---------------------------------------- */
 body {
 	color: #323131;
@@ -44,7 +44,7 @@ body {
 }
 
 /* 
-	Spacing
+	Text elements - Spacing
 ---------------------------------------- */
 p,
 pre,
