--- a/javascript/redlove/plugins/redlove_modal.css
+++ b/javascript/redlove/plugins/redlove_modal.css
@@ -4,51 +4,8 @@
 * @link http://redlove.org
 */
 
-.redlove_hidden {
-	display: none;
-}
-/* Put on body to prevent background scrolling */
-.redlove_no-scroll {
-	overflow: hidden;
-}
-
-/*
-firstly we deal with the container element
-making it relatively positioned
-and defining its height proportionally
-to its width - giving us a 16:9 ratio
-*/
-.redlove_embed {
-	position: relative;
-	padding: 0;
-	padding-bottom: 56.25%; /* 16:9 ratio*/
-	height: 0;
-	overflow: hidden;
-}
-.redlove_embed-16-9 {
-	padding-bottom: 56.25%; /* 16:9 ratio*/
-}
-.redlove_embed-4-3 {
-	padding-bottom: 75.00%; /* 4:3 ratio*/
-}
-/*
-then we make the actual embedded content
-behave in terms of its dimensions
-and its position within the container
-*/
-.redlove_embed iframe,
-.redlove_embed object,
-.redlove_embed embed {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-}
-
-
-/* 
-	Logsdon Modal
+/* ------------------------------------------------------------
+	Redlove Modal
 
 	<div class="redlove_modal">
 		<div class="redlove_modal_liner">
@@ -62,7 +19,7 @@ and its position within the container
 			</div>
 		</div>
 	</div>
-________________________________________ */
+------------------------------------------------------------ */
 
 .redlove_modal-container {
 	display: none;
@@ -189,10 +146,10 @@ ________________________________________ */
 	content: '\f054';
 }
 
-/* #Tablet : Design for a width of 768px */
+/* Tablet : Design for a width of 768px */
 @media only screen and (max-width: 59.99em) {/*0px - 959px*/
 }
-/* #Mobile (Landscape) : Design for a width of 480px */
+/* Mobile (Landscape) : Design for a width of 480px */
 @media only screen and (max-width: 47.99em) {/*0px - 767px*/
 	/*
 	.redlove_modal_liner,
@@ -204,9 +161,8 @@ ________________________________________ */
 	*/
 }
 
-
-/*
-	Logsdon Modal - Overrides
+/* 
+	Redlove Modal - Example Overrides
 ---------------------------------------- 
 
 .redlove_modal_liner {
@@ -223,3 +179,49 @@ ________________________________________ */
 	box-shadow:0 0 18px rgba(0, 0, 0, 0.4);
 }
 */
+
+/* ------------------------------------------------------------
+	Redlove Utilities
+------------------------------------------------------------ */
+
+.redlove_hidden {
+	display: none;
+}
+/* Put on body to prevent background scrolling */
+.redlove_no-scroll {
+	overflow: hidden;
+}
+
+/*
+firstly we deal with the container element
+making it relatively positioned
+and defining its height proportionally
+to its width - giving us a 16:9 ratio
+*/
+.redlove_embed {
+	position: relative;
+	padding: 0;
+	padding-bottom: 56.25%; /* 16:9 ratio*/
+	height: 0;
+	overflow: hidden;
+}
+.redlove_embed-16-9 {
+	padding-bottom: 56.25%; /* 16:9 ratio*/
+}
+.redlove_embed-4-3 {
+	padding-bottom: 75.00%; /* 4:3 ratio*/
+}
+/*
+then we make the actual embedded content
+behave in terms of its dimensions
+and its position within the container
+*/
+.redlove_embed iframe,
+.redlove_embed object,
+.redlove_embed embed {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+}
