More organizing, additions, and adjustments with continued use

--- a/stylesheets/site.example.css
+++ b/stylesheets/site.example.css
@@ -25,6 +25,20 @@
 	# Fonts
 	# Print
 */
+/* ============================================================
+	# 1st level
+============================================================ */
+/* --------------------------------------------------------------------------------
+	## 2nd level
+-------------------------------------------------------------------------------- */
+/* ------------------------------------------------------------
+	3rd level
+------------------------------------------------------------ */
+/* 
+	Block description
+---------------------------------------- */
+/* Comment */
+
 
 /* ============================================================
 	# Foundation
@@ -118,8 +132,15 @@ body {
 }
 
 /* Set as the desired <body> color; it is layered on top of the real <body> */
-.body-liner {
-	background: #FFFFFF;
+.band-liner {
+	width: 960px;
+	max-width: 960px;
+}
+/* Tablet : Design for a width of 768px (0px - 959px) */
+@media only screen and (max-width: 59.99em) {
+	.band-liner {
+		width: 100%;
+	}
 }
 
 /* --------------------------------------------------------------------------------
@@ -133,9 +154,13 @@ body {
 		</div>
 	</div>
 -------------------------------------------------------------------------------- */
-.band-liner {
-	width: 960px;
-	max-width: 960px;
+
+/* Desktop : Design for a width of 960px (0px - 1199px) */
+@media only screen and (min-width: 75.00em) {
+	.band-liner {
+		width: 960px;
+		max-width: 960px;
+	}
 }
 
 /* --------------------------------------------------------------------------------
