--- a/stylesheets/redlove/base.css
+++ b/stylesheets/redlove/base.css
@@ -111,24 +111,37 @@ body {
 	border: 0;
 	margin: 0;
 	padding: 0;
-}
-body {
-	position: relative;
-	background: #FFFFFF;
-}
-
-/*
-html,
-body {
+	/*
 	height: 100%;
 	width: 100%;
+	*/
 }
-*/
 html{
 	height: 100%;
 }
 body {
+	background: #FFFFFF;
 	min-height: 100%;
+	position: relative;
+}
+
+/* 
+	Add dimensions to the inside of the element and not the outside
+	(borders and padding do not effect widths and heights)
+---------------------------------------- */
+body,
+body * {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+/* 
+	Help fix choppy scrolling on elements with overflow scrolling
+	http://stackoverflow.com/questions/12845892/ios-overflow-x-or-position-absolute-makes-scrolling-choppy
+---------------------------------------- */
+body * {
+	-webkit-overflow-scrolling: touch;
 }
 
 /* --------------------------------------------------------------------------------
@@ -157,6 +170,16 @@ html {
 	text-rendering: optimizeLegibility;
 }
 
+body {
+	font-size: 10px;/* =10px; fallback for <= IE8 */
+	font-size: 1.0rem;/* =10px */
+	line-height: 1.0;/* =100% */
+	
+	font-size: 16px;
+	font-size: 1.6rem;
+	line-height: 1.4;/*1.42857;*/
+}
+
 /* 
 	Base Font - Family
 ---------------------------------------- */
@@ -181,32 +204,22 @@ body {
 	'Courier New', Courier, 'Lucida Console', Monaco, monospace
 	*/
 	font-family: sans-serif;
-	font-size: 10px;/* =10px; fallback for <= IE8 */
-	font-size: 1.0rem;/* =10px */
-	line-height: 1.0;/* =100% */
-	
-	font-size: 16px;
-	font-size: 1.6rem;
-	line-height: 1.42857;
-	line-height: 1.4;
 }
 
 /* ------------------------------------------------------------
 	Text elements
 ------------------------------------------------------------ */
 
-::-moz-selection {
-	background: #b3d4fc;
-	text-shadow: none;
-}
-
+::-moz-selection,
 ::selection {
 	background: #b3d4fc;
 	text-shadow: none;
 }
 
-i, i i i,
-em, em em em {
+i,
+i i i,
+em,
+em em em {
 	font-style: italic;
 }
 i i,
@@ -223,7 +236,7 @@ small {
 
 sub,
 sup {
-	font-size: 60%;/*75%;*/
+	font-size: 60%;/*75%*/
 	line-height: 0;
 	position: relative;
 	vertical-align: baseline;
@@ -256,8 +269,7 @@ code,
 kbd,
 pre,
 samp {
-	font-family: monospace, serif;
-	/*_font-family: 'courier new', monospace;*/
+	font-family: monospace, serif;/*'Courier New', Courier, 'Lucida Console', Monaco, monospace, serif*/
 	font-size: 1em;
 }
 kbd {
@@ -275,18 +287,11 @@ kbd {
 }
 /* Improve readability of pre-formatted text in all browsers. */
 pre {
-	background-color: #f5f5f5;
-	border: 1px solid #CCCCCC;
-	-webkit-border-radius: 4px;
-	-khtml-border-radius: 4px;
-	-moz-border-radius: 4px;
-	border-radius: 4px;
-	color: #333333;
 	display: block;
 	line-height: 1.42857;
-	word-break: break-all;
 	white-space: pre;
 	white-space: pre-wrap;
+	word-break: break-all;
 	word-wrap: break-word;
 }
 
@@ -327,6 +332,7 @@ a:hover,
 a:active {
 	outline: 0;
 }
+a[rel="external"],
 a[target="_blank"] {
 }
 
@@ -375,29 +381,29 @@ ul ul {
 ul ul ul {
 	list-style: square;
 }
-	li {
-		margin-bottom: 1.0em;
-		margin-left: 1.0em;
-		/* Use image as bullet
-		background: transparent url('../images/bullet.png') scroll no-repeat 0 5px;
-		padding-left: 14px;
-		*/
-	}
-	li:last-child {
-		margin-bottom: 0;
-	}
+li {
+	margin-bottom: 1.0em;
+	margin-left: 1.0em;
+	/* Use image as bullet
+	background: transparent url('../images/bullet.png') scroll no-repeat 0 5px;
+	padding-left: 14px;
+	*/
+}
+li:last-child {
+	margin-bottom: 0;
+}
 
 dl {
 	display: block;
 	margin-bottom: 1.0em;
 }
-dl dt {
+dt {
 	font-weight: 700;
 }
-dl dd {
+dd {
 	margin-bottom: 1.0em;
 }
-dl dd:last-child {
+dd:last-child {
 	margin-bottom: 0;
 }
 
@@ -423,13 +429,15 @@ dl dd:last-child {
 	</div>
 -------------------------------------------------------------------------------- */
 table {
-	table-layout: auto;
-	empty-cells: show;
 	border-collapse: collapse;
 	border-spacing: 0;
-}/*width: auto;width:100%;*//*table-layout: fixed;*/
+	empty-cells: show;
+	table-layout: auto;/*fixed*/
+	/*width: auto;width:100%;*/
+}
 /*
-table td {
+th,
+td {
 	text-align: left;
 	vertical-align: top;
 }
@@ -661,6 +669,15 @@ img {
 
 svg:not(:root) {
 	overflow: hidden;
+}
+
+
+/* ============================================================
+	# Responsive / Media Queries / Target Devices
+============================================================ */
+
+@-ms-viewport {
+	width: device-width;
 }
 
 
