--- a/stylesheets/redlove/examples.css
+++ b/stylesheets/redlove/examples.css
@@ -98,24 +98,78 @@
 }
 
 /* ------------------------------------------------------------
+	Line Counter
+	
+	<pre class="line-counter">
+		<span>def print_hi(name)</span>
+		<span>	puts "Hi, #{name}"</span>
+		<span>end</span>
+		<span></span>
+		<span>print_hi('Tom')</span>
+		<span>#=> prints 'Hi, Tom' to STDOUT.</span>
+	</pre>
+------------------------------------------------------------ */
+
+pre.line-counter {
+	background-color: #fff;
+	counter-reset: line;
+	font-family: monospace;
+	border-radius: .25em;
+	box-shadow: 0.1em 0.1em 0.5em rgba(0, 0, 0, 0.45);
+	line-height: 0;
+	margin: 4em auto;
+	padding: 0.5em;
+	width: 27.5em;
+}
+pre.line-counter span {
+	display: block;
+	line-height: 1.5rem;
+}
+pre.line-counter span:before {
+	border-right: 1px solid #ddd;
+	color: #888;
+	content: counter(line);
+	counter-increment: line;
+	display: inline-block;
+	margin-right: .5em;
+	padding: 0 .5em;
+}
+
+/* ------------------------------------------------------------
 	Animation
 ------------------------------------------------------------ */
 
-@-webkit-keyframes flicker{
-	0%, 100%   { opacity: 1; }
-	50%  { opacity: 0.2; }
+@-webkit-keyframes flicker {
+	0%, 100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.2;
+	}
 }
-@-moz-keyframes flicker{
-	0%, 100%   { opacity: 1; }
-	50%  { opacity: 0.2; }
+@-moz-keyframes flicker {
+	0%, 100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.2;
+	}
 }
-@-o-keyframes flicker{
-	0%, 100%   { opacity: 1; }
-	50%  { opacity: 0.2; }
+@-o-keyframes flicker {
+	0%, 100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.2;
+	}
 }
 @keyframes flicker {
-	0%, 100%   { opacity: 1; }
-	50%  { opacity: 0.2; }
+	0%, 100% {
+		opacity: 1;
+	}
+	50% {
+		opacity: 0.2;
+	}
 }
 .animation-flicker {
 	-webkit-animation: flicker 1s infinite;
@@ -126,25 +180,295 @@
 .animation-flicker2 {
 	-webkit-animation: flicker 0.5s steps(5, start) infinite;
 	-moz-animation: flicker 0.5s steps(5, start) infinite;
+	-o-animation: flicker 0.5s steps(5, start) infinite;
 	animation: flicker 0.5s steps(5, start) infinite;
 }
 
-@keyframes blink {
-	to {
-		visibility: hidden;
-	}
-}
 @-webkit-keyframes blink {
 	to {
 		visibility: hidden;
 	}
 }
+@keyframes blink {
+	to {
+		visibility: hidden;
+	}
+}
 .blink {
-	-webkit-animation: blink 1s steps(5, start) infinite;
-	-moz-animation: blink 0.5s linear infinite;
-	animation: blink 1s steps(5, start) infinite;
+	-webkit-animation: blink 1s linear infinite;
+	-moz-animation: blink 1s linear infinite;
+	-o-animation: blink 1s linear infinite;
+	animation: blink 1s linear infinite;
 }
 
+@keyframes fade-in {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
+}
+@keyframes fade-out {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0;
+	}
+}
+@keyframes fade-in-up {
+	0% {
+		opacity: 0;
+		transform: translateY(1.5rem);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0px);
+	}
+}
+@keyframes fade-in-down {
+	0% {
+		opacity: 0;
+		transform: translateY(-1.5rem);
+	}
+	100% {
+		opacity: 1;
+		transform: translateY(0px);
+	}
+}
+@keyframes scale-up {
+	0% {
+		transform: scale(0);
+	}
+	100% {
+		transform: scale(1);
+	}
+}
+@keyframes scale-down {
+	0% {
+		transform: scale(1);
+	}
+	100% {
+		transform: scale(0);
+	}
+}
+@keyframes slide-up {
+	0% {
+		transform: translateY(25vh);
+	}
+	100% {
+		transform: translateY(0px);
+	}
+}
+@keyframes slide-down {
+	0% {
+		transform: translateY(-25vh);
+	}
+	100% {
+		transform: translateY(0px);
+	}
+}
+@keyframes slide-left {
+	0% {
+		transform: translateX(25vh);
+	}
+	100% {
+		transform: translateX(0px);
+	}
+}
+@keyframes slide-right {
+	0% {
+		transform: translateX(-25vh);
+	}
+	100% {
+		transform: translateX(0px);
+	}
+}
+@keyframes flip-in {
+	0% {
+		opacity: 0;
+		transform: scaleY(0);
+	}
+	100% {
+		opacity: 1;
+		transform: scaleY(1);
+	}
+}
+@keyframes flip-out {
+	0% {
+		opacity: 1;
+		transform: scaleY(1);
+	}
+	100% {
+		opacity: 0;
+		transform: scaleY(0);
+	}
+}
+@keyframes rotate-right {
+	0% {
+		transform: rotate(0deg);
+	}
+	100% {
+		transform: rotate(360deg);
+	}
+}
+@keyframes rotate-left {
+	0% {
+		transform: rotate(360deg);
+	}
+	100% {
+		transform: rotate(0deg);
+	}
+}
+@keyframes flash {
+	0% {
+		opacity: 1;
+	}
+	100% {
+		opacity: 0.25;
+	}
+}
+@keyframes shake {
+	15% {
+		-webkit-transform: translateX(0.5rem);
+		-moz-transform: translateX(0.5rem);
+		-ms-transform: translateX(0.5rem);
+		-o-transform: translateX(0.5rem);
+		transform: translateX(0.5rem);
+	}
+	30% {
+		-webkit-transform: translateX(-0.4rem);
+		-moz-transform: translateX(-0.4rem);
+		-ms-transform: translateX(-0.4rem);
+		-o-transform: translateX(-0.4rem);
+		transform: translateX(-0.4rem);
+	}
+	45% {
+		-webkit-transform: translateX(0.3rem);
+		-moz-transform: translateX(0.3rem);
+		-ms-transform: translateX(0.3rem);
+		-o-transform: translateX(0.3rem);
+		transform: translateX(0.3rem);
+	}
+	60% {
+		-webkit-transform: translateX(-0.2rem);
+		-moz-transform: translateX(-0.2rem);
+		-ms-transform: translateX(-0.2rem);
+		-o-transform: translateX(-0.2rem);
+		transform: translateX(-0.2rem);
+	}
+	75% {
+		-webkit-transform: translateX(0.1rem);
+		-moz-transform: translateX(0.1rem);
+		-ms-transform: translateX(0.1rem);
+		-o-transform: translateX(0.1rem);
+		transform: translateX(0.1rem);
+	}
+	90% {
+		-webkit-transform: translateX(0px);
+		-moz-transform: translateX(0px);
+		-ms-transform: translateX(0px);
+		-o-transform: translateX(0px);
+		transform: translateX(0px);
+	}
+}
+.animation-fade-in {
+	-webkit-animation: fade-in 500ms ease 0s normal none 1 running;
+	-moz-animation: fade-in 500ms ease 0s normal none 1 running;
+	-o-animation: fade-in 500ms ease 0s normal none 1 running;
+	animation: fade-in 500ms ease 0s normal none 1 running;
+}
+.animation-fade-out {
+	-webkit-animation: fade-out 500ms ease 0s normal none 1 running;
+	-moz-animation: fade-out 500ms ease 0s normal none 1 running;
+	-o-animation: fade-out 500ms ease 0s normal none 1 running;
+	animation: fade-out 500ms ease 0s normal none 1 running;
+}
+.animation-fade-in-up {
+	-webkit-animation: fade-in-up 500ms ease 0s normal none 1 running;
+	-moz-animation: fade-in-up 500ms ease 0s normal none 1 running;
+	-o-animation: fade-in-up 500ms ease 0s normal none 1 running;
+	animation: fade-in-up 500ms ease 0s normal none 1 running;
+}
+.animation-fade-in-down {
+	-webkit-animation: fade-in-down 500ms ease 0s normal none 1 running;
+	-moz-animation: fade-in-down 500ms ease 0s normal none 1 running;
+	-o-animation: fade-in-down 500ms ease 0s normal none 1 running;
+	animation: fade-in-down 500ms ease 0s normal none 1 running;
+}
+.animation-slide-up {
+	-webkit-animation: slide-up 200ms ease-in-out 0s normal none 1 running;
+	-moz-animation: slide-up 200ms ease-in-out 0s normal none 1 running;
+	-o-animation: slide-up 200ms ease-in-out 0s normal none 1 running;
+	animation: slide-up 200ms ease-in-out 0s normal none 1 running;
+}
+.animation-slide-down {
+	-webkit-animation: slide-down 200ms ease-in-out 0s normal none 1 running;
+	-moz-animation: slide-down 200ms ease-in-out 0s normal none 1 running;
+	-o-animation: slide-down 200ms ease-in-out 0s normal none 1 running;
+	animation: slide-down 200ms ease-in-out 0s normal none 1 running;
+}
+.animation-slide-right {
+	-webkit-animation: slide-right 200ms ease-in-out 0s normal none 1 running;
+	-moz-animation: slide-right 200ms ease-in-out 0s normal none 1 running;
+	-o-animation: slide-right 200ms ease-in-out 0s normal none 1 running;
+	animation: slide-right 200ms ease-in-out 0s normal none 1 running;
+}
+.animation-slide-left {
+	-webkit-animation: slide-left 200ms ease-in-out 0s normal none 1 running;
+	-moz-animation: slide-left 200ms ease-in-out 0s normal none 1 running;
+	-o-animation: slide-left 200ms ease-in-out 0s normal none 1 running;
+	animation: slide-left 200ms ease-in-out 0s normal none 1 running;
+}
+.animation-scale-up {
+	-webkit-animation: scale-up 200ms ease-in-out 0s normal none 1 running;
+	-moz-animation: scale-up 200ms ease-in-out 0s normal none 1 running;
+	-o-animation: scale-up 200ms ease-in-out 0s normal none 1 running;
+	animation: scale-up 200ms ease-in-out 0s normal none 1 running;
+}
+.animation-scale-down {
+	-webkit-animation: scale-down 200ms ease-in-out 0s normal none 1 running;
+	-moz-animation: scale-down 200ms ease-in-out 0s normal none 1 running;
+	-o-animation: scale-down 200ms ease-in-out 0s normal none 1 running;
+	animation: scale-down 200ms ease-in-out 0s normal none 1 running;
+}
+.animation-flip-in {
+	-webkit-animation: flip-in 200ms cubic-bezier(0.5, -0.5, 0.5, 1.5) 0s normal none 1 running;
+	-moz-animation: flip-in 200ms cubic-bezier(0.5, -0.5, 0.5, 1.5) 0s normal none 1 running;
+	-o-animation: flip-in 200ms cubic-bezier(0.5, -0.5, 0.5, 1.5) 0s normal none 1 running;
+	animation: flip-in 200ms cubic-bezier(0.5, -0.5, 0.5, 1.5) 0s normal none 1 running;
+}
+.animation-flip-out {
+	-webkit-animation: flip-out 200ms cubic-bezier(0.5, -0.5, 0.5, 1.5) 0s normal none 1 running;
+	-moz-animation: flip-out 200ms cubic-bezier(0.5, -0.5, 0.5, 1.5) 0s normal none 1 running;
+	-o-animation: flip-out 200ms cubic-bezier(0.5, -0.5, 0.5, 1.5) 0s normal none 1 running;
+	animation: flip-out 200ms cubic-bezier(0.5, -0.5, 0.5, 1.5) 0s normal none 1 running;
+}
+.animation-rotate-right {
+	-webkit-animation: rotate-right 500ms ease 0s normal none 1 running;
+	-moz-animation: rotate-right 500ms ease 0s normal none 1 running;
+	-o-animation: rotate-right 500ms ease 0s normal none 1 running;
+	animation: rotate-right 500ms ease 0s normal none 1 running;
+}
+.animation-rotate-left {
+	-webkit-animation: rotate-left 500ms ease 0s normal none 1 running;
+	-moz-animation: rotate-left 500ms ease 0s normal none 1 running;
+	-o-animation: rotate-left 500ms ease 0s normal none 1 running;
+	animation: rotate-left 500ms ease 0s normal none 1 running;
+}
+.animation-flash {
+	-webkit-animation: flash 500ms ease 0s normal none 3 running;
+	-moz-animation: flash 500ms ease 0s normal none 3 running;
+	-o-animation: flash 500ms ease 0s normal none 3 running;
+	animation: flash 500ms ease 0s normal none 3 running;
+}
+.animation-shake {
+	-webkit-animation: shake 200ms ease 0s normal none 1 running;
+	-moz-animation: shake 200ms ease 0s normal none 1 running;
+	-o-animation: shake 200ms ease 0s normal none 1 running;
+	animation: shake 200ms ease 0s normal none 1 running;
+}
 
 /* ============================================================
 	# Style Examples
