--- a/stylesheets/redlove/examples.css
+++ b/stylesheets/redlove/examples.css
@@ -8,6 +8,52 @@
 	# Style References
 ============================================================ */
 
+@-webkit-keyframes keyframes-example {
+	0%, 100% {
+		opacity: 1.0;
+	}
+	50% {
+		opacity: 0.2;
+	}
+}
+@-moz-keyframes keyframes-example {
+	0%, 100% {
+		opacity: 1.0;
+	}
+	50% {
+		opacity: 0.2;
+	}
+}
+@-o-keyframes keyframes-example {
+	0%, 100% {
+		opacity: 1.0;
+	}
+	50% {
+		opacity: 0.2;
+	}
+}
+@keyframes keyframes-example {
+	0%, 100% {
+		opacity: 1.0;
+	}
+	50% {
+		opacity: 0.2;
+	}
+}
+.animation {
+	-webkit-animation: keyframes-example 1s infinite;
+	-moz-animation: keyframes-example 1s infinite;
+	-o-animation: keyframes-example 1s infinite;
+	animation: keyframes-example 1s infinite;
+}
+
+.background-size {
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+}
+
 .border-radius {
 	-webkit-top-left-border-radius: 10px;
 	-webkit-top-right-border-radius: 10px;
@@ -40,10 +86,55 @@
 		inset -3px -3px 3px 0px rgba(0, 0, 0, 0.3);
 }
 
+.box-sizing {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.filter {
+	-webkit-filter: grayscale(100%);
+	-moz-filter: grayscale(100%);
+	-ms-filter: grayscale(100%);
+	-o-filter: grayscale(100%);
+	filter: grayscale(100%);
+}
+
+.opacity {
+	-moz-opacity: 0.5;
+	opacity: 0.5;
+	filter: alpha(opacity: 50);
+}
+
 .text-shadow {
 	text-shadow: 0 1px rgb(0, 0, 0);
 	text-shadow: -1px -1px 0px rgb(0, 0, 0);
 	filter: dropshadow(color=#000000, offx=-1, offy=-1);
+}
+
+.transform {
+	-webkit-transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-ms-transform: translate(-50%, -50%);
+	-o-transform: translate(-50%, -50%);
+	transform: translate(-50%, -50%);
+}
+
+.transition {
+	-webkit-transition: all 0.4s ease-out 0s;
+	-moz-transition: all 0.4s ease-out 0s;
+	-ms-transition: all 0.4s ease-out 0s;
+	-o-transition: all 0.4s ease-out 0s;
+	transition: all 0.4s ease-out 0s;
+}
+
+.user-select {
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 /* ------------------------------------------------------------
@@ -141,7 +232,7 @@ pre.line-counter span:before {
 
 @-webkit-keyframes flicker {
 	0%, 100% {
-		opacity: 1;
+		opacity: 1.0;
 	}
 	50% {
 		opacity: 0.2;
@@ -149,7 +240,7 @@ pre.line-counter span:before {
 }
 @-moz-keyframes flicker {
 	0%, 100% {
-		opacity: 1;
+		opacity: 1.0;
 	}
 	50% {
 		opacity: 0.2;
@@ -157,7 +248,7 @@ pre.line-counter span:before {
 }
 @-o-keyframes flicker {
 	0%, 100% {
-		opacity: 1;
+		opacity: 1.0;
 	}
 	50% {
 		opacity: 0.2;
@@ -165,7 +256,7 @@ pre.line-counter span:before {
 }
 @keyframes flicker {
 	0%, 100% {
-		opacity: 1;
+		opacity: 1.0;
 	}
 	50% {
 		opacity: 0.2;
@@ -203,127 +294,223 @@ pre.line-counter span:before {
 
 @keyframes fade-in {
 	0% {
-		opacity: 0;
+		opacity: 0.0;
 	}
 	100% {
-		opacity: 1;
+		opacity: 1.0;
 	}
 }
 @keyframes fade-out {
 	0% {
-		opacity: 1;
+		opacity: 1.0;
 	}
 	100% {
-		opacity: 0;
+		opacity: 0.0;
 	}
 }
 @keyframes fade-in-up {
 	0% {
-		opacity: 0;
+		opacity: 0.0;
+		-webkit-transform: translateY(1.5rem);
+		-moz-transform: translateY(1.5rem);
+		-ms-transform: translateY(1.5rem);
+		-o-transform: translateY(1.5rem);
 		transform: translateY(1.5rem);
 	}
 	100% {
-		opacity: 1;
+		opacity: 1.0;
+		-webkit-transform: translateY(0px);
+		-moz-transform: translateY(0px);
+		-ms-transform: translateY(0px);
+		-o-transform: translateY(0px);
 		transform: translateY(0px);
 	}
 }
 @keyframes fade-in-down {
 	0% {
-		opacity: 0;
+		opacity: 0.0;
+		-webkit-transform: translateY(-1.5rem);
+		-moz-transform: translateY(-1.5rem);
+		-ms-transform: translateY(-1.5rem);
+		-o-transform: translateY(-1.5rem);
 		transform: translateY(-1.5rem);
 	}
 	100% {
-		opacity: 1;
+		opacity: 1.0;
+		-webkit-transform: translateY(0px);
+		-moz-transform: translateY(0px);
+		-ms-transform: translateY(0px);
+		-o-transform: translateY(0px);
 		transform: translateY(0px);
 	}
 }
 @keyframes scale-up {
 	0% {
+		-webkit-transform: scale(0);
+		-moz-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
 		transform: scale(0);
 	}
 	100% {
+		-webkit-transform: scale(1);
+		-moz-transform: scale(1);
+		-ms-transform: scale(1);
+		-o-transform: scale(1);
 		transform: scale(1);
 	}
 }
 @keyframes scale-down {
 	0% {
+		-webkit-transform: scale(1);
+		-moz-transform: scale(1);
+		-ms-transform: scale(1);
+		-o-transform: scale(1);
 		transform: scale(1);
 	}
 	100% {
+		-webkit-transform: scale(0);
+		-moz-transform: scale(0);
+		-ms-transform: scale(0);
+		-o-transform: scale(0);
 		transform: scale(0);
 	}
 }
 @keyframes slide-up {
 	0% {
+		-webkit-transform: translateY(25vh);
+		-moz-transform: translateY(25vh);
+		-ms-transform: translateY(25vh);
+		-o-transform: translateY(25vh);
 		transform: translateY(25vh);
 	}
 	100% {
+		-webkit-transform: translateY(0px);
+		-moz-transform: translateY(0px);
+		-ms-transform: translateY(0px);
+		-o-transform: translateY(0px);
 		transform: translateY(0px);
 	}
 }
 @keyframes slide-down {
 	0% {
+		-webkit-transform: translateY(-25vh);
+		-moz-transform: translateY(-25vh);
+		-ms-transform: translateY(-25vh);
+		-o-transform: translateY(-25vh);
 		transform: translateY(-25vh);
 	}
 	100% {
+		-webkit-transform: translateY(0px);
+		-moz-transform: translateY(0px);
+		-ms-transform: translateY(0px);
+		-o-transform: translateY(0px);
 		transform: translateY(0px);
 	}
 }
 @keyframes slide-left {
 	0% {
+		-webkit-transform: translateX(25vh);
+		-moz-transform: translateX(25vh);
+		-ms-transform: translateX(25vh);
+		-o-transform: translateX(25vh);
 		transform: translateX(25vh);
 	}
 	100% {
+		-webkit-transform: translateX(0px);
+		-moz-transform: translateX(0px);
+		-ms-transform: translateX(0px);
+		-o-transform: translateX(0px);
 		transform: translateX(0px);
 	}
 }
 @keyframes slide-right {
 	0% {
+		-webkit-transform: translateX(-25vh);
+		-moz-transform: translateX(-25vh);
+		-ms-transform: translateX(-25vh);
+		-o-transform: translateX(-25vh);
 		transform: translateX(-25vh);
 	}
 	100% {
+		-webkit-transform: translateX(0px);
+		-moz-transform: translateX(0px);
+		-ms-transform: translateX(0px);
+		-o-transform: translateX(0px);
 		transform: translateX(0px);
 	}
 }
 @keyframes flip-in {
 	0% {
-		opacity: 0;
+		opacity: 0.0;
+		-webkit-transform: scaleY(0);
+		-moz-transform: scaleY(0);
+		-ms-transform: scaleY(0);
+		-o-transform: scaleY(0);
 		transform: scaleY(0);
 	}
 	100% {
-		opacity: 1;
+		opacity: 1.0;
+		-webkit-transform: scaleY(1);
+		-moz-transform: scaleY(1);
+		-ms-transform: scaleY(1);
+		-o-transform: scaleY(1);
 		transform: scaleY(1);
 	}
 }
 @keyframes flip-out {
 	0% {
-		opacity: 1;
+		opacity: 1.0;
+		-webkit-transform: scaleY(1);
+		-moz-transform: scaleY(1);
+		-ms-transform: scaleY(1);
+		-o-transform: scaleY(1);
 		transform: scaleY(1);
 	}
 	100% {
-		opacity: 0;
+		opacity: 0.0;
+		-webkit-transform: scaleY(0);
+		-moz-transform: scaleY(0);
+		-ms-transform: scaleY(0);
+		-o-transform: scaleY(0);
 		transform: scaleY(0);
 	}
 }
 @keyframes rotate-right {
 	0% {
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-ms-transform: rotate(0deg);
+		-o-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
 	100% {
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		-o-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
 }
 @keyframes rotate-left {
 	0% {
+		-webkit-transform: rotate(360deg);
+		-moz-transform: rotate(360deg);
+		-ms-transform: rotate(360deg);
+		-o-transform: rotate(360deg);
 		transform: rotate(360deg);
 	}
 	100% {
+		-webkit-transform: rotate(0deg);
+		-moz-transform: rotate(0deg);
+		-ms-transform: rotate(0deg);
+		-o-transform: rotate(0deg);
 		transform: rotate(0deg);
 	}
 }
 @keyframes flash {
 	0% {
-		opacity: 1;
+		opacity: 1.0;
 	}
 	100% {
 		opacity: 0.25;
@@ -1189,18 +1376,44 @@ pre.line-counter span:before {
 	Meter
 ------------------------------------------------------- */
 
-.meter {
-	background: #f1f1f1;
-	border: 1px solid #ccc;
-}
-.meter-bar {
-	background: #ccc;
+.meter,
+.meter * {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
+}
+.meter {
+	background: #f1f1f1;
+	border: 1px solid #ccc;
+	position: relative;
+}
+.meter-bar {
+	background: #ccc;
 	color: #f1f1f1;
 	font-size: 0.8em;
 	padding: 0.25em 0.5em;
 	text-align: right;
 	width: 80%;
+}
+.meter-indicators,
+.meter-indicators li {
+	height: 100%;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.meter-indicators {
+	display: inline-block;
+	position: absolute;
+	width: 100%;
+}
+.meter-indicators li {
+	border-left: 1px solid rgba(255, 255, 255, 0.6);
+	float: left;
+}
+.meter-indicators li:first-child {
+	border-left: 0;
+}
+.meter-indicators a {
+	display: block;
 }
