--- a/stylesheets/redlove/common.css
+++ b/stylesheets/redlove/common.css
@@ -2500,19 +2500,131 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	top: 0;
 }
 
-.transform-o-0 {
+.transform-origin-0 {
 	-webkit-transform-origin: 0% 0%;
 	-moz-transform-origin: 0% 0%;
 	-ms-transform-origin: 0% 0%;
 	-o-transform-origin: 0% 0%;
 	transform-origin: 0% 0%;
 }
-.transform-r-45 {
+.transform-rotate-22 {
+	-webkit-transform: rotate(22.5deg);
+	-moz-transform: rotate(22.5deg);
+	-ms-transform: rotate(22.5deg);
+	-o-transform: rotate(22.5deg);
+	transform: rotate(22.5deg);
+}
+.transform-rotate-45 {
 	-webkit-transform: rotate(45deg);
 	-moz-transform: rotate(45deg);
 	-ms-transform: rotate(45deg);
 	-o-transform: rotate(45deg);
 	transform: rotate(45deg);
+}
+.transform-rotate-67 {
+	-webkit-transform: rotate(67.5deg);
+	-moz-transform: rotate(67.5deg);
+	-ms-transform: rotate(67.5deg);
+	-o-transform: rotate(67.5deg);
+	transform: rotate(67.5deg);
+}
+.transform-rotate-90 {
+	-webkit-transform: rotate(90deg);
+	-moz-transform: rotate(90deg);
+	-ms-transform: rotate(90deg);
+	-o-transform: rotate(90deg);
+	transform: rotate(90deg);
+}
+.transform-rotate-112 {
+	-webkit-transform: rotate(112.5deg);
+	-moz-transform: rotate(112.5deg);
+	-ms-transform: rotate(112.5deg);
+	-o-transform: rotate(112.5deg);
+	transform: rotate(112.5deg);
+}
+.transform-rotate-135 {
+	-webkit-transform: rotate(135deg);
+	-moz-transform: rotate(135deg);
+	-ms-transform: rotate(135deg);
+	-o-transform: rotate(135deg);
+	transform: rotate(135deg);
+}
+.transform-rotate-157 {
+	-webkit-transform: rotate(157.5deg);
+	-moz-transform: rotate(157.5deg);
+	-ms-transform: rotate(157.5deg);
+	-o-transform: rotate(157.5deg);
+	transform: rotate(157.5deg);
+}
+.transform-rotate-180 {
+	-webkit-transform: rotate(180deg);
+	-moz-transform: rotate(180deg);
+	-ms-transform: rotate(180deg);
+	-o-transform: rotate(180deg);
+	transform: rotate(180deg);
+}
+.transform-rotate-202 {
+	-webkit-transform: rotate(202.5deg);
+	-moz-transform: rotate(202.5deg);
+	-ms-transform: rotate(202.5deg);
+	-o-transform: rotate(202.5deg);
+	transform: rotate(202.5deg);
+}
+.transform-rotate-225 {
+	-webkit-transform: rotate(225deg);
+	-moz-transform: rotate(225deg);
+	-ms-transform: rotate(225deg);
+	-o-transform: rotate(225deg);
+	transform: rotate(225deg);
+}
+.transform-rotate-247 {
+	-webkit-transform: rotate(247.5deg);
+	-moz-transform: rotate(247.5deg);
+	-ms-transform: rotate(247.5deg);
+	-o-transform: rotate(247.5deg);
+	transform: rotate(247.5deg);
+}
+.transform-rotate-270 {
+	-webkit-transform: rotate(270deg);
+	-moz-transform: rotate(270deg);
+	-ms-transform: rotate(270deg);
+	-o-transform: rotate(270deg);
+	transform: rotate(270deg);
+}
+.transform-rotate-292 {
+	-webkit-transform: rotate(292.5deg);
+	-moz-transform: rotate(292.5deg);
+	-ms-transform: rotate(292.5deg);
+	-o-transform: rotate(292.5deg);
+	transform: rotate(292.5deg);
+}
+.transform-rotate-315 {
+	-webkit-transform: rotate(315deg);
+	-moz-transform: rotate(315deg);
+	-ms-transform: rotate(315deg);
+	-o-transform: rotate(315deg);
+	transform: rotate(315deg);
+}
+.transform-rotate-337 {
+	-webkit-transform: rotate(337.5deg);
+	-moz-transform: rotate(337.5deg);
+	-ms-transform: rotate(337.5deg);
+	-o-transform: rotate(337.5deg);
+	transform: rotate(337.5deg);
+}
+.transform-rotate-360 {
+	-webkit-transform: rotate(360deg);
+	-moz-transform: rotate(360deg);
+	-ms-transform: rotate(360deg);
+	-o-transform: rotate(360deg);
+	transform: rotate(360deg);
+}
+.transform-rotate-720 {
+	-webkit-transform: rotate(720deg);
+	-moz-transform: rotate(720deg);
+	-ms-transform: rotate(720deg);
+	-o-transform: rotate(720deg);
+	transform: rotate(720deg);
 }
 
 /* ------------------------------------------------------------
