--- a/stylesheets/redlove/common.css
+++ b/stylesheets/redlove/common.css
@@ -275,6 +275,7 @@ pre > code {
 
 /* 
 	Text elements - Blockquotes
+	https://css-tricks.com/snippets/css/simple-and-nice-blockquote-styling/
 
 	<blockquote>
 		<p>The quote</p>
@@ -849,29 +850,118 @@ input[type="submit"] {
 
 /* 
 	Forms - <select> wrap; Styled select and form replacement
+	
+	http://stackoverflow.com/questions/3532649/problem-with-select-and-after-with-css-in-webkit
+	https://andywalpole.me/#!/blog/141056/using-css-style-notoriously-tricky-form-elements-checkboxes-select-dropdowns
+	https://trykickoff.github.io/demos/forms.html
 ---------------------------------------- */
 /* Support <select> styling on IE by styling the wrap instead */
-.input_select-wrap {
-	display: inline-block;*display: inline;*zoom: 1;/*ie6/7*/
+.select-wrapper {
+	display: inline-block;
+	margin-bottom: 1.5rem;
 	overflow: hidden;
+	position: relative;
 	vertical-align: middle;
 }
-	.input_select-wrap select {
-		/*
-		-webkit-appearance: none;
-		background-color: transparent;
-		background-color: rgba(0,0,0,0);
-		border: 0;
-		-webkit-border-radius: 0px;
-		-khtml-border-radius: 0px;
-		-moz-border-radius: 0px;
-		border-radius: 0px;
-		text-transform: uppercase;
-		*/
-	}
-	.input_select-wrap-hide-arrow select {
-		min-width: 120%;
-	}
+.select-wrapper:before {
+	content: '\f0d7';
+	display: inline-block;
+	font-family: FontAwesome;
+	left: auto;
+	line-height: 1.0;
+	pointer-events: none;
+	position: absolute;
+	right: 1.0em;
+	top: 50%;
+	-webkit-transform: translate(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+	-o-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+.select-wrapper select {
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	appearance: none;
+	margin-bottom: 0;
+	padding-right: 1.5em;
+	/*max-width: 120%;
+	min-width: 120%;
+	width: 120%;*/
+	width: 100%;
+}
+.select-wrapper select::-ms-expand {
+	display: none;
+}
+
+.checkbox-wrapper,
+.radio-wrapper {
+	display: inline-block;
+	margin-bottom: 1.5rem;
+	overflow: hidden;
+	position: relative;
+	vertical-align: middle;
+	
+	cursor: pointer;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-khtml-user-select: none;
+	-moz-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+.checkbox-wrapper input[type="checkbox"],
+.radio-wrapper input[type="radio"] {
+	opacity: 0.0;
+	position: absolute;
+	z-index: -1;
+}
+.checkbox-wrapper span:before,
+.radio-wrapper span:before {
+	display: inline-block;
+	font-family: FontAwesome;
+	margin-top: -0.1em;
+	text-align: center;
+	vertical-align: middle;
+	width: 1.28571em;
+}
+.checkbox-wrapper span:before {
+	content: "\f096";
+}
+.checkbox-wrapper input:checked ~ span:before {
+	content: "\f046";
+}
+.radio-wrapper span:before {
+	content: "\f10c";
+}
+.radio-wrapper input:checked ~ span:before {
+	content: "\f192";
+}
+
+.file-wrapper {
+	display: inline-block;
+	margin-bottom: 1.5rem;
+	overflow: hidden;
+	padding-right: 4.0em;
+	position: relative;
+	vertical-align: middle;
+}
+.file-wrapper input[type="file"] {
+	opacity: 0.0;
+	position: absolute;
+	z-index: -1;
+}
+.file-wrapper span {
+	display: inline-block;
+	font-weight: 400;
+	vertical-align: middle;
+}
+.file-wrapper:after {
+	content: "Browse";
+	cursor: pointer;
+	display: inline-block;
+	vertical-align: middle;
+}
 
 /* 
 	Forms - Faux file upload styling
@@ -3477,23 +3567,32 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w5-offset {
 		margin-left: 5%;
 	}
+	.w5-offset-right {
+		margin-right: 5%;
+	}
 .w1-12 {
 	width: 8.33%;
 }
+	.w1-12.last {
+		width: 8.34%;
+	}
 	.w1-12-offset {
 		margin-left: 8.33%;
 	}
-	.w1-12.last {
-		width: 8.34%;
+	.w1-12-offset-right {
+		margin-right: 8.33%;
 	}
 .w1-11 {
 	width: 9.09%;
 }
+	.w1-11.last {
+		width: 9.10%;
+	}
 	.w1-11-offset {
 		margin-left: 9.09%;
 	}
-	.w1-11.last {
-		width: 9.10%;
+	.w1-11-offset-right {
+		margin-right: 9.09%;
 	}
 .w1-10,
 .w10 {
@@ -3503,14 +3602,21 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w10-offset {
 		margin-left: 10%;
 	}
+	.w1-10-offset-right,
+	.w10-offset-right {
+		margin-right: 10%;
+	}
 .w1-9 {
 	width: 11.11%;
 }
+	.w1-9.last {
+		width: 11.12%;
+	}
 	.w1-9-offset {
 		margin-left: 11.11%;
 	}
-	.w1-9.last {
-		width: 11.12%;
+	.w1-9-offset-right {
+		margin-right: 11.11%;
 	}
 .w1-8 {
 	width: 12.50%;
@@ -3518,14 +3624,20 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w1-8-offset {
 		margin-left: 12.50%;
 	}
+	.w1-8-offset-right {
+		margin-right: 12.50%;
+	}
 .w1-7 {
 	width: 14.28%;
 }
+	.w1-7.last {
+		width: 14.32%;
+	}
 	.w1-7-offset {
 		margin-left: 14.28%;
 	}
-	.w1-7.last {
-		width: 14.32%;
+	.w1-7-offset-right {
+		margin-right: 14.28%;
 	}
 .w15 {
 	width: 15%;
@@ -3533,14 +3645,20 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w15-offset {
 		margin-left: 15%;
 	}
+	.w15-offset-right {
+		margin-right: 15%;
+	}
 .w1-6 {
 	width: 16.66%;
 }
+	.w1-6.last {
+		width: 16.70%;
+	}
 	.w1-6-offset {
 		margin-left: 16.66%;
 	}
-	.w1-6.last {
-		width: 16.70%;
+	.w1-6-offset-right {
+		margin-right: 16.66%;
 	}
 .w1-5,
 .w20 {
@@ -3550,6 +3668,10 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w20-offset {
 		margin-left: 20%;
 	}
+	.w1-5-offset-right,
+	.w20-offset-right {
+		margin-right: 20%;
+	}
 .w1-4,
 .w25 {
 	width: 25%;
@@ -3558,29 +3680,43 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w25-offset {
 		margin-left: 25%;
 	}
+	.w1-4-offset-right,
+	.w25-offset-right {
+		margin-right: 25%;
+	}
 .w30 {
 	width: 30%;
 }
 	.w30-offset {
 		margin-left: 30%;
 	}
+	.w30-offset-right {
+		margin-right: 30%;
+	}
 .w1-3,
 .w33 {
 	width: 33.33%;
 }
+	.w1-3.last,
+	.w33.last {
+		width: 33.34%;
+	}
 	.w1-3-offset,
 	.w33-offset {
 		margin-left: 33.33%;
 	}
-	.w1-3.last,
-	.w33.last {
-		width: 33.34%;
+	.w1-3-offset-right,
+	.w33-offset-right {
+		margin-right: 33.33%;
 	}
 .w35 {
 	width: 35%;
 }
 	.w35-offset {
 		margin-left: 35%;
+	}
+	.w35-offset-right {
+		margin-right: 35%;
 	}
 .w2-5,
 .w40 {
@@ -3590,11 +3726,18 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w40-offset {
 		margin-left: 40%;
 	}
+	.w2-5-offset-right,
+	.w40-offset-right {
+		margin-right: 40%;
+	}
 .w45 {
 	width: 45%;
 }
 	.w45-offset {
 		margin-left: 45%;
+	}
+	.w45-offset-right {
+		margin-right: 45%;
 	}
 .w1-2,
 .w50 {
@@ -3604,11 +3747,18 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w50-offset {
 		margin-left: 50%;
 	}
+	.w1-2-offset-right,
+	.w50-offset-right {
+		margin-right: 50%;
+	}
 .w55 {
 	width: 55%;
 }
 	.w55-offset {
 		margin-left: 55%;
+	}
+	.w55-offset-right {
+		margin-right: 55%;
 	}
 .w3-5,
 .w60 {
@@ -3618,29 +3768,43 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w60-offset {
 		margin-left: 60%;
 	}
+	.w3-5-offset-right,
+	.w60-offset-right {
+		margin-right: 60%;
+	}
 .w65 {
 	width: 65%;
 }
 	.w65-offset {
 		margin-left: 65%;
 	}
+	.w65-offset-right {
+		margin-right: 65%;
+	}
 .w2-3,
 .w66 {
 	width: 66.66%;
 }
+	.w2-3.last,
+	.w66.last {
+		width: 66.67%;
+	}
 	.w2-3-offset,
 	.w66-offset {
 		margin-left: 66.66%;
 	}
-	.w2-3.last,
-	.w66.last {
-		width: 66.67%;
+	.w2-3-offset-right,
+	.w66-offset-right {
+		margin-right: 66.66%;
 	}
 .w70 {
 	width: 70%;
 }
 	.w70-offset {
 		margin-left: 70%;
+	}
+	.w70-offset-right {
+		margin-right: 70%;
 	}
 .w3-4,
 .w75 {
@@ -3650,6 +3814,10 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w75-offset {
 		margin-left: 75%;
 	}
+	.w3-4-offset-right,
+	.w75-offset-right {
+		margin-right: 75%;
+	}
 .w4-5,
 .w80 {
 	width: 80%;
@@ -3658,11 +3826,18 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w80-offset {
 		margin-left: 80%;
 	}
+	.w4-5-offset-right,
+	.w80-offset-right {
+		margin-right: 80%;
+	}
 .w85 {
 	width: 85%;
 }
 	.w85-offset {
 		margin-left: 85%;
+	}
+	.w85-offset-right {
+		margin-right: 85%;
 	}
 .w90 {
 	width: 90%;
@@ -3670,11 +3845,17 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w90-offset {
 		margin-left: 90%;
 	}
+	.w90-offset-right {
+		margin-right: 90%;
+	}
 .w95 {
 	width: 95%;
 }
 	.w95-offset {
 		margin-left: 95%;
+	}
+	.w95-offset-right {
+		margin-right: 95%;
 	}
 .w1,
 .w100 {
@@ -3683,6 +3864,10 @@ data:image/gif;base64,R0lGODlhAQABAIAAAP7//wAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw
 	.w1-offset,
 	.w100-offset {
 		margin-left: 100%;
+	}
+	.w1-offset-right,
+	.w100-offset-right {
+		margin-right: 100%;
 	}
 
 /* 
